# dk-db-sync

./: .gitignore  pyproject.toml  secrets.yaml.secret  sync.py  sync_trello.py
.github/workflows/: python-app.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
